After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 314174 - Bluefish 1.0.3 can't be compiled without gnome-vfs2
Bluefish 1.0.3 can't be compiled without gnome-vfs2
Status: RESOLVED FIXED
Product: bluefish
Classification: Other
Component: application
unspecified
Other All
: Normal blocker
: ---
Assigned To: Bluefish Maintainer(s)
Bluefish Maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2005-08-22 15:21 UTC by Damian Rakowski
Modified: 2005-08-27 16:10 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Damian Rakowski 2005-08-22 15:21:17 UTC
Please describe the problem:
The following linker error occurs when trying to compile bluefish 1.03 without
gnome-vfs2. When gnome-vfs is present bluefish compiles correctly, but this
package is OPTIONAL :)

gcc -DLOCALEDIR=\"/usr/local/share/locale\" -DGNULOCALEDIR=\"/usr/loca
l/share/locale\" -DLOCALE_ALIAS_PATH=\"/usr/local/share/locale:.\" -DP
KGDATADIR=\"/usr/local/share/bluefish/\" -DHAVE_CONFIG_H -o bluefish a
bout.o authen.o bf_lib.o bfspell.o bluefish.o bookmark.o cap.o char_ta
ble.o dialog_utils.o document.o filebrowser.o fref.o gtk_easy.o gui.o 
highlight.o html.o html2.o html_diag.o html_form.o html_table.o image.
o menu.o msg_queue.o outputbox.o pixmap.o preferences.o project.o quic
kstart.o rcfile.o rpopup.o snr2.o stringlist.o treetips.o undo_redo.o 
wizards.o  -Wl,--export-dynamic -lgtk-x11-2.0 -lgdk-x11-2.0 -latk-1.0 
-lgdk_pixbuf-2.0 -lm -lpangoxft-1.0 -lpangox-1.0 -lpango-1.0 -lgobject
-2.0 -lgmodule-2.0 -ldl -lglib-2.0   -L/usr/lib -lpcre -lrt -laspell
bf_lib.o(.text+0x1244): In function `create_secure_dir_return_filename
':
: warning: the use of `tempnam' is dangerous, better use `mkstemp'
html.o(.text+0x4a0f): In function `emailok_lcb':
: undefined reference to `gnome_vfs_escape_string'
html.o(.text+0x4a78): In function `emailok_lcb':
: undefined reference to `gnome_vfs_escape_string'
collect2: ld returned 1 exit status
make[1]: *** [bluefish] Błąd 1
make[1]: Leaving directory `/bluefish-1.0.3/src'
make: *** [all] Błąd 2



Steps to reproduce:
Just try to recompile it without gnome-vfs2 :)

Actual results:


Expected results:


Does this happen every time?
Yes

Other information:
Comment 1 Jim Hayward 2005-08-23 13:06:51 UTC
Daniel, why are we using gnome_vfs_escape_string () here. I don't understand the
reason for using this function in this context.
Comment 2 Daniel Leidert 2005-08-23 14:01:46 UTC
Because the body and the subject need to be in URL-encoded format.
gnome_vfs_escape_string () does the convert-job for us, so the user does not
need to care about the URL-encoding. I sent a patch to the mailing list, which
simply fixes this bug. If there are no objections, I will commit it and close
this bug.
Comment 3 Jim Hayward 2005-08-27 16:10:40 UTC
Fixed in the 1.0 branch of CVS.