Implement URL-encoding feature in email-dialog depending on the availability of gnome-vfs (should fix http://bugzilla.gnome.org/show_bug.cgi?id=314174).

git-svn-id: svn://svn.code.sf.net/p/bluefish/code/branches/bluefish_1_0/bluefish@2502 7640d186-872a-4c71-b7b2-a5696852cc35